# Morse.Translate

./: CMakeLists.txt  README.md  ssh.i  ssh.i.pub
gui/: main.qml  qml.qrc
include/: backend.h  code.h  config.h
src/: backend.cpp  code.cpp  config.cpp  main.cpp
tests/: CMakeLists.txt  code.cpp  main_test.cpp
